refactor ebs
