# twitch-extension/ebs/gooapi/gooapi.go
@@ -1,0 +1,7 @@
+package gooapi
+
+type GooApi interface {
+	CollectFromVial(vial int) error
+	Dispense() error
+	GoToPosition(x, y float32) error
+}
